{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 84,
  "lineage": "d65146a5-2065-4ea2-cf3b-8db0f4705f2d",
  "resources": [
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0702add5937e646ed",
            "association_id": "eipassoc-022ac2036e02cef96",
            "domain": "vpc",
            "id": "eipalloc-0702add5937e646ed",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0ffdba23a05c1dcf8",
            "private_dns": "ip-10-1-101-66.ca-central-1.compute.internal",
            "private_ip": "10.1.101.66",
            "public_dns": "ec2-15-223-141-240.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.223.141.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "submetering-runner-vpc-ca-central-1a"
            },
            "tags_all": {
              "Example": "submetering-runner",
              "Name": "submetering-runner-vpc-ca-central-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:internet-gateway/igw-0acc86dc1966e6d6b",
            "id": "igw-0acc86dc1966e6d6b",
            "owner_id": "152368484097",
            "tags": {
              "Name": "submetering-runner-vpc"
            },
            "tags_all": {
              "Example": "submetering-runner",
              "Name": "submetering-runner-vpc"
            },
            "vpc_id": "vpc-0b5ac52f3d41d999d"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0702add5937e646ed",
            "connectivity_type": "public",
            "id": "nat-0ecf7116ea6569b73",
            "network_interface_id": "eni-0ffdba23a05c1dcf8",
            "private_ip": "10.1.101.66",
            "public_ip": "15.223.141.240",
            "subnet_id": "subnet-0df15d48863571730",
            "tags": {
              "Name": "submetering-runner-vpc-ca-central-1a"
            },
            "tags_all": {
              "Example": "submetering-runner",
              "Name": "submetering-runner-vpc-ca-central-1a"
            }
          },
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07b70445e5d3037121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ecf7116ea6569b73",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07b70445e5d303712",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_nat_gateway.this",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0acc86dc1966e6d6b",
            "id": "r-rtb-06b4948b3665efee01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b4948b3665efee0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:route-table/rtb-07b70445e5d303712",
            "id": "rtb-07b70445e5d303712",
            "owner_id": "152368484097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ecf7116ea6569b73",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "submetering-runner-vpc-private"
            },
            "tags_all": {
              "Example": "submetering-runner",
              "Name": "submetering-runner-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5ac52f3d41d999d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:route-table/rtb-06b4948b3665efee0",
            "id": "rtb-06b4948b3665efee0",
            "owner_id": "152368484097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0acc86dc1966e6d6b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "submetering-runner-vpc-public"
            },
            "tags_all": {
              "Example": "submetering-runner",
              "Name": "submetering-runner-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5ac52f3d41d999d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de05bf1137dff6ab",
            "route_table_id": "rtb-07b70445e5d303712",
            "subnet_id": "subnet-03004dc217bf535d7"
          },
          "dependencies": [
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0082a741c0d4c390c",
            "route_table_id": "rtb-06b4948b3665efee0",
            "subnet_id": "subnet-0df15d48863571730"
          },
          "dependencies": [
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:subnet/subnet-03004dc217bf535d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03004dc217bf535d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152368484097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "submetering-runner-vpc-private-ca-central-1a"
            },
            "tags_all": {
              "Example": "submetering-runner",
              "Name": "submetering-runner-vpc-private-ca-central-1a"
            },
            "vpc_id": "vpc-0b5ac52f3d41d999d"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:subnet/subnet-0df15d48863571730",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.1.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df15d48863571730",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152368484097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "submetering-runner-vpc-public-ca-central-1a"
            },
            "tags_all": {
              "Example": "submetering-runner",
              "Name": "submetering-runner-vpc-public-ca-central-1a"
            },
            "vpc_id": "vpc-0b5ac52f3d41d999d"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:vpc/vpc-0b5ac52f3d41d999d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-02bf38074f13312c4",
            "default_route_table_id": "rtb-006fc5fdf88150946",
            "default_security_group_id": "sg-077123ba62da2a0fe",
            "dhcp_options_id": "dopt-69e2e201",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5ac52f3d41d999d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006fc5fdf88150946",
            "owner_id": "152368484097",
            "tags": {
              "Name": "submetering-runner-vpc"
            },
            "tags_all": {
              "Example": "submetering-runner",
              "Name": "submetering-runner-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.runners.module.runners",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "runner_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:152368484097:security-group/sg-085b8265910c1b01c",
            "description": "Github Actions Runner security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085b8265910c1b01c",
            "ingress": [],
            "name": "submetering-runner-github-actions-runner-sg20230117223443596700000005",
            "name_prefix": "submetering-runner-github-actions-runner-sg",
            "owner_id": "152368484097",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "submetering-runner-action-runner",
              "Project": "submetering-runner",
              "ghr:environment": "submetering-runner",
              "ghr:ssm_config_path": "/github-action-runners/submetering-runner/runners/config"
            },
            "tags_all": {
              "Example": "submetering-runner",
              "Name": "submetering-runner-action-runner",
              "Project": "submetering-runner",
              "ghr:environment": "submetering-runner",
              "ghr:ssm_config_path": "/github-action-runners/submetering-runner/runners/config"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5ac52f3d41d999d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.base.module.vpc.aws_customer_gateway.this",
            "module.base.module.vpc.aws_db_subnet_group.database",
            "module.base.module.vpc.aws_default_network_acl.this",
            "module.base.module.vpc.aws_default_route_table.default",
            "module.base.module.vpc.aws_default_security_group.this",
            "module.base.module.vpc.aws_default_vpc.this",
            "module.base.module.vpc.aws_egress_only_internet_gateway.this",
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.base.module.vpc.aws_flow_log.this",
            "module.base.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.base.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.base.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.base.module.vpc.aws_internet_gateway.this",
            "module.base.module.vpc.aws_nat_gateway.this",
            "module.base.module.vpc.aws_network_acl.database",
            "module.base.module.vpc.aws_network_acl.elasticache",
            "module.base.module.vpc.aws_network_acl.intra",
            "module.base.module.vpc.aws_network_acl.outpost",
            "module.base.module.vpc.aws_network_acl.private",
            "module.base.module.vpc.aws_network_acl.public",
            "module.base.module.vpc.aws_network_acl.redshift",
            "module.base.module.vpc.aws_network_acl_rule.database_inbound",
            "module.base.module.vpc.aws_network_acl_rule.database_outbound",
            "module.base.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.base.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.base.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.base.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.base.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.base.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.base.module.vpc.aws_network_acl_rule.private_inbound",
            "module.base.module.vpc.aws_network_acl_rule.private_outbound",
            "module.base.module.vpc.aws_network_acl_rule.public_inbound",
            "module.base.module.vpc.aws_network_acl_rule.public_outbound",
            "module.base.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.base.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.base.module.vpc.aws_redshift_subnet_group.redshift",
            "module.base.module.vpc.aws_route.database_internet_gateway",
            "module.base.module.vpc.aws_route.database_ipv6_egress",
            "module.base.module.vpc.aws_route.database_nat_gateway",
            "module.base.module.vpc.aws_route.private_ipv6_egress",
            "module.base.module.vpc.aws_route.private_nat_gateway",
            "module.base.module.vpc.aws_route.public_internet_gateway",
            "module.base.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.base.module.vpc.aws_route_table.database",
            "module.base.module.vpc.aws_route_table.elasticache",
            "module.base.module.vpc.aws_route_table.intra",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_route_table.redshift",
            "module.base.module.vpc.aws_route_table_association.database",
            "module.base.module.vpc.aws_route_table_association.elasticache",
            "module.base.module.vpc.aws_route_table_association.intra",
            "module.base.module.vpc.aws_route_table_association.outpost",
            "module.base.module.vpc.aws_route_table_association.private",
            "module.base.module.vpc.aws_route_table_association.public",
            "module.base.module.vpc.aws_route_table_association.redshift",
            "module.base.module.vpc.aws_route_table_association.redshift_public",
            "module.base.module.vpc.aws_subnet.database",
            "module.base.module.vpc.aws_subnet.elasticache",
            "module.base.module.vpc.aws_subnet.intra",
            "module.base.module.vpc.aws_subnet.outpost",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_subnet.redshift",
            "module.base.module.vpc.aws_vpc.this",
            "module.base.module.vpc.aws_vpc_dhcp_options.this",
            "module.base.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.base.module.vpc.aws_vpn_gateway.this",
            "module.base.module.vpc.aws_vpn_gateway_attachment.this",
            "module.base.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.base.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.base.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.base.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.base.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    }
  ]
}